--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 				  				<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-									<li><a href="#"><i class="fa fa-behance"></i></a></li>
+
+									<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 				  				</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-				  				<a href="mailto:support@colorlib.com">support@colorlib.com</a>				
+				  				<a href="mailto:test@communications.com">test@communications.com</a>
 				  			</div>
 				  		</div>			  					
 		  			</div>
@@ -53,22 +53,17 @@
 			    <div class="container main-menu">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+				        <a href="index.html"><img src="img/logo.png" alt="Test Logo" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
 				          <li><a href="about.html">About</a></li>
-				          <li><a href="services.html">Service</a></li>
+				          <li><a href="services.html">Services</a></li>
 				          <li><a href="projects.html">Projects</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
-				            <ul>
-				              <li><a href="blog-home.html">Blog Home</a></li>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				            </ul>
-				          </li>						          
-				          <li><a href="contact.html">Contact</a></li>
-			              <li><a href="elements.html">Elements</a></li>
+							<li><a href="contractors.html">Contractors</a></li>
+							<li><a href="contact.html">Contact</a></li>
+
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -83,11 +78,11 @@
 						<div class="banner-content col-lg-12 col-md-12">
 							<h6 class="text-uppercase">Don’t look further, here is the key</h6>
 							<h1>
-								We’re Industrial solution			
+								Accelerating Technology Deployment
 							</h1>
-							<p class="text-white">
+						<!--	<p class="text-white">
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et <br> dolore magna aliqua. Ut enim ad minim.  sed do eiusmod tempor incididunt.
-							</p>
+							</p>-->
 							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
 						</div>												
 					</div>
@@ -484,9 +479,7 @@
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
 								</p>
 								<p class="footer-text">
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
 								</p>								
 							</div>
 						</div>
@@ -514,8 +507,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
-									<a href="#"><i class="fa fa-behance"></i></a>
+
+									<a href="#"><i class="fa fa-instagram"></i></a>
 								</div>
 							</div>
 						</div>							
