--- a/contractors.html
+++ b/contractors.html
@@ -39,6 +39,7 @@
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </div>
@@ -52,7 +53,7 @@
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
             <div id="logo">
-                <a href="index.html"><img src="img/logo.png" alt="" title=""/></a>
+                <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
@@ -62,6 +63,7 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contractors.html">Contractors</a></li>
                     <li><a href="contact.html">Contact</a></li>
+
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -75,81 +77,57 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Contact Us
+                    Contractors
                 </h1>
-                <p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span>
-                    <a href="contact.html"> Contact Us</a></p>
+                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contractors.html"> Contractors</a></p>
             </div>
         </div>
     </div>
 </section>
 <!-- End banner Area -->
 
-<!-- Start contact-page Area -->
-<section class="contact-page-area section-gap">
+<!-- Start Sample Area -->
+<section class="sample-text-area">
     <div class="container">
-        <div class="row">
-            <div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
-            <div class="col-lg-4 d-flex flex-column address-wrap">
-                <div class="single-contact-address d-flex flex-row">
-                    <div class="icon">
-                        <span class="lnr lnr-home"></span>
-                    </div>
-                    <div class="contact-details">
-                        <h5>New Orleans, La</h5>
-                        <p>123 American Way</p>
-                    </div>
-                </div>
-                <div class="single-contact-address d-flex flex-row">
-                    <div class="icon">
-                        <span class="lnr lnr-phone-handset"></span>
-                    </div>
-                    <div class="contact-details">
-                        <h5>00 (880) 9865 562</h5>
-                        <p>Mon to Fri 9am to 6 pm</p>
-                    </div>
-                </div>
-                <div class="single-contact-address d-flex flex-row">
-                    <div class="icon">
-                        <span class="lnr lnr-envelope"></span>
-                    </div>
-                    <div class="contact-details">
-                        <h5>support@testcommunications.com</h5>
-                        <p>Send us your inquiry anytime!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
-                    <div class="row">
-                        <div class="col-lg-6 form-group">
-                            <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control"
-                                   required="" type="text">
+        <h3 class="text-heading">Text Sample</h3>
+        <p class="sample-text">
+            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
 
-                            <input name="email" placeholder="Enter email address"
-                                   pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'"
-                                   class="common-input mb-20 form-control" required="" type="email">
+        </p>
+    </div>
+</section>
+<!-- End Sample Area -->
 
-                            <input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Enter your subject'"
-                                   class="common-input mb-20 form-control" required="" type="text">
-                            <div class="mt-20 alert-msg" style="text-align: left;"></div>
-                        </div>
-                        <div class="col-lg-6 form-group">
-                            <textarea class="common-textarea form-control" name="message" placeholder="Message"
-                                      onfocus="this.placeholder = ''" onblur="this.placeholder = 'Message'"
-                                      required=""></textarea>
-                            <button class="genric-btn primary mt-30" style="float: right;">Send Message</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+<!-- Start List Area -->
+
+<section class="container">
+    <div class="col-md-4 mt-sm-30 mb-40">
+        <h3 class="mb-20">Our Contractors</h3>
+        <div class="">
+            <ul class="unordered-list">
+                <li>Fta Keys</li>
+                <li>For Women Only Your Computer Usage</li>
+                <li>Dealing With Technical Support 10 Useful Tips</li>
+                <li>Make Myspace Your Best Designed Space</li>
+                <li>Cleaning And Organizing Your Computer</li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-md-4 mt-sm-30 mb-80">
+        <h3 class="mb-20">Our Suppliers</h3>
+        <div class="">
+            <ul class="unordered-list">
+                <li>Fta Keys</li>
+                <li>For Women Only Your Computer Usage</li>
+                <li>Dealing With Technical Support 10 Useful Tips</li>
+                <li>Make Myspace Your Best Designed Space</li>
+                <li>Cleaning And Organizing Your Computer</li>
+            </ul>
         </div>
     </div>
 </section>
-<!-- End contact-page Area -->
+
+<!-- End List Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
@@ -159,11 +137,9 @@
                 <div class="single-footer-widget">
                     <h6>About Us</h6>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
                     </p>
                     <p class="footer-text">
-
                     </p>
                 </div>
             </div>
@@ -172,14 +148,9 @@
                     <h6>Newsletter</h6>
                     <p>Stay update with our latest</p>
                     <div class="" id="mc_embed_signup">
-                        <form target="_blank" novalidate="true"
-                              action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                              method="get" class="form-inline">
-                            <input class="form-control" name="EMAIL" placeholder="Enter Email"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-                                   required="" type="email">
-                            <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
-                                                                         aria-hidden="true"></i></button>
+                        <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
+                            <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                            <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
                             <div style="position: absolute; left: -5000px;">
                                 <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                             </div>
@@ -207,12 +178,9 @@
 <!-- End footer Area -->
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
-<script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
 <script src="js/easing.min.js"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.min.js"></script>
