--- a/services.html
+++ b/services.html
@@ -39,13 +39,13 @@
 				  				<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-									<li><a href="#"><i class="fa fa-behance"></i></a></li>
+
+									<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 				  				</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-				  				<a href="mailto:support@colorlib.com">support@colorlib.com</a>				
+				  				<a href="mailto:test@communications.com">test@communications.com</a>
 				  			</div>
 				  		</div>			  					
 		  			</div>
@@ -59,16 +59,11 @@
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
 				          <li><a href="about.html">About</a></li>
-				          <li><a href="services.html">Service</a></li>
+				          <li><a href="services.html">Services</a></li>
 				          <li><a href="projects.html">Projects</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
-				            <ul>
-				              <li><a href="blog-home.html">Blog Home</a></li>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				            </ul>
-				          </li>						          
+				          <li><a href="contractors.html">Contractors</a></li>
 				          <li><a href="contact.html">Contact</a></li>
-			              <li><a href="elements.html">Elements</a></li>
+
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -82,7 +77,7 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Services				
+								Services
 							</h1>	
 							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="services.html"> Services</a></p>
 						</div>	
@@ -98,11 +93,11 @@
 						<div class="col-md-12 pb-30 header-text text-center">
 							<h1 class="mb-10">Our Offered Services to you</h1>
 							<p>
-								Who are in extremely love with eco friendly system..
+								Who are in extremely love with eco friendly system. inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct. Who are in extremely love with eco friendly system. inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct. Who are in extremely love with eco friendly system. inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
 							</p>
 						</div>
 					</div>						
-					<div class="row">
+					<div class="row mb-40">
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
@@ -137,12 +132,47 @@
 							</div>
 						</div>												
 					</div>
+					<div class="row mb-40">
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/s1.jpg" alt="">
+								</div>
+								<h4>Automotive Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/s2.jpg" alt="">
+								</div>
+								<h4>Construction & Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/s3.jpg" alt="">
+								</div>
+								<h4>Industrial Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>	
 			</section>
 			<!-- End service Area -->			
 
 			<!-- Start cat Area -->
-			<section class="cat-area section-gap aboutus-cat" id="feature">
+			<!--<section class="cat-area section-gap aboutus-cat" id="feature">
 				<div class="container">							
 					<div class="row">
 						<div class="col-lg-4">	
@@ -174,11 +204,11 @@
 						</div>
 					</div>
 				</div>	
-			</section>
+			</section>-->
 			<!-- End cat Area -->						
 
 			<!-- Start feedback Area -->
-			<section class="feedback-area aboutus-feedback section-gap" id="feedback">
+			<!--<section class="feedback-area aboutus-feedback section-gap" id="feedback">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-12 pb-60 header-text text-center">
@@ -244,7 +274,7 @@
 						</div>
 					</div>
 				</div>	
-			</section>
+			</section>-->
 			<!-- End feedback Area -->
 				
 			<!-- start footer Area -->		
@@ -258,9 +288,6 @@
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
 								</p>
 								<p class="footer-text">
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 								</p>								
 							</div>
 						</div>
@@ -288,8 +315,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
-									<a href="#"><i class="fa fa-behance"></i></a>
+
+									<a href="#"><i class="fa fa-instagram"></i></a>
 								</div>
 							</div>
 						</div>							
