content updates for website

--- a/about.html
+++ b/about.html
@@ -57,13 +57,9 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index.html">Home</a></li>
 				          <li><a href="about.html">About</a></li>
 				          <li><a href="services.html">Services</a></li>
-				          <li><a href="projects.html">Projects</a></li>
-							<li><a href="contractors.html">Contractors</a></li>
-							<li><a href="contact.html">Contact</a></li>
-
+						  <li><a href="contact.html">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -87,22 +83,81 @@
 			<!-- End banner Area -->	
 
 			<!-- Start home-about Area -->
-				<section class="sample-text-area">
+				<section class="sample-text-area align-center">
 					<div class="container">
 						<!--<h3 class="text-heading">Text Sample</h3>-->
 						<h1 class="mb-20">
-							We’ve made a life that will change you
+							We are Test Communications
 						</h1>
 						<p class="sample-text">
-							Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results: Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
+							TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers.
+							These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.
 						</p>
 					</div>
 				</section>
 				<!-- End Sample Area -->
 			<!-- End home-about Area -->
+			  <section class="about-our-team">
+				  <div class="container">
+					  <!--<h3 class="text-heading">Text Sample</h3>-->
+					  <h1 class="mb-20">
+						  Our Team
+					  </h1>
+					  <div class="row justify-content-center align-items-center mb-80">
+						  <div class="col-lg-12 col-md-12">
+							  <div class="single-team-member">
+								  <div class="circle">
+									  <div class="inner"></div>
+								  </div>
+								  <p>
+									  Darrin Wagner <br> President & CEO
+								  </p>
+							  </div>
+						  </div>
+						  <div class="col-lg-3 col-md-6">
+							  <div class="single-team-member">
+								  <div class="circle">
+									  <div class="inner"></div>
+								  </div>
+								  <p>
+								  </p>Gerard 'Rod' LeBlanc <br> Contruction Superintendent
+							  </div>
+						  </div>
+						  <div class="col-lg-3 col-md-6">
+							  <div class="single-team-member">
+								  <div class="circle">
+									  <div class="inner"></div>
+								  </div>
+								  <p>
+									  Christian Legoria <br> Construction Manager
+								  </p>
+							  </div>
+						  </div>
+						  <div class="col-lg-3 col-md-6">
+							  <div class="single-team-member">
+								  <div class="circle">
+									  <div class="inner"></div>
+								  </div>
+								  <p>
+									  Mike Shamblin <br> Contruction Manager
+								  </p>
+							  </div>
+						  </div>
+						  <div class="col-lg-3 col-md-6">
+							  <div class="single-team-member">
+								  <div class="circle">
+									  <div class="inner"></div>
+								  </div>
+								  <p>
+									  Tammy Kellis <br> Finance & Accounting Manager
+								  </p>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+			  </section>
 
-				
-			<!-- start footer Area -->		
+			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
 					<div class="row">
