--- a/contact.html
+++ b/contact.html
@@ -56,11 +56,8 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contractors.html">Contractors</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -69,7 +66,7 @@
 </header><!-- #header -->
 
 <!-- start banner Area -->
-<section class="banner-area relative" id="home">
+<section class="banner-area banner-contact relative" id="home">
     <div class="overlay overlay-bg"></div>
     <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
