--- a/elements.html
+++ b/elements.html
@@ -43,7 +43,7 @@
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-				  				<a href="mailto:test@communications.com">test@communications.com</a>
+				  				<a href="mailto:info@testcomm.com">info@testcomm.com</a>
 				  			</div>
 				  		</div>			  					
 		  			</div>
@@ -57,6 +57,7 @@
 				        <ul class="nav-menu">
 				          <li><a href="about.html">About</a></li>
 				          <li><a href="services.html">Services</a></li>
+							<li><a href="clients.html">Clients</a></li>
 						  <li><a href="contact.html">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
