--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-				  				<a href="mailto:test@communications.com">test@communications.com</a>
+				  				<a href="mailto:info@testcomm.com">info@testcomm.com</a>
 				  			</div>
 				  		</div>			  					
 		  			</div>
@@ -59,6 +59,7 @@
 				        <ul class="nav-menu">
 				          <li><a href="about.html">About</a></li>
 				          <li><a href="services.html">Services</a></li>
+							<li><a href="clients.html">Clients</a></li>
 						  <li><a href="contact.html">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
@@ -72,12 +73,11 @@
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-center">
 						<div class="banner-content col-lg-12 col-md-12">
-							<h6 class="text-uppercase">Don’t look further, here is the key</h6>
+							<!--<h6 class="text-uppercase">Don’t look further, here is the key</h6>-->
 							<h1>
-								Accelerating Technology Deployment
+								Delivering Wireless Innovation
 							</h1>
-							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
-						</div>												
+						</div>
 					</div>
 				</div>
 			</section>
@@ -89,8 +89,7 @@
 					<div class="row">
 						<div class="col-lg-4">	
 							<div class="single-cat d-flex flex-column">
-								<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-magic-wand"></span></span></a>
-								<h4 class="mb-20" style="margin-top: 23px;">Maintenance</h4>
+								<h4 class="mb-20 mt-40">Testing</h4>
 								<p>
 									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
 								</p>
@@ -98,8 +97,7 @@
 						</div>
 						<div class="col-lg-4">	
 							<div class="single-cat">
-								<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-rocket"></span></span></a>
-								<h4 class="mt-40 mb-20">Residental Service</h4>
+								<h4 class="mt-40 mb-20">EF&I</h4>
 								<p>
 									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
 								</p>
@@ -107,8 +105,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="single-cat">
-								<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-bug"></span></span></a>
-								<h4 class="mt-40 mb-20">Commercial Service</h4>
+								<h4 class="mt-40 mb-20">Specialty</h4>
 								<p>
 									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
 								</p>
@@ -129,7 +126,7 @@
 								<div class="circle">
 								  <div class="inner"></div>
 								</div>
-								<h5><span class="counter">2</span>K+</h5>
+								<h5><span class="counter">12</span>K+</h5>
 								<p>
 									Projects Completed
 								</p>
@@ -140,9 +137,9 @@
 								<div class="circle">
 								  <div class="inner"></div>
 								</div>
-								<h5><span class="counter">5.5</span>K</h5>
+								<h5><span class="counter">1</span>K+</h5>
 								<p>
-									Total Employees
+									Towers Modified
 								</p>
 							</div>
 						</div>
@@ -151,9 +148,9 @@
 								<div class="circle">
 								  <div class="inner"></div>
 								</div>
-								<h5 class="counter">959</h5>
+								<h5><span class="counter">10</span>K+</h5>
 								<p>
-									Happy Clients
+									Antennas Installed
 								</p>
 							</div>
 						</div>
@@ -162,9 +159,9 @@
 								<div class="circle">
 								  <div class="inner"></div>
 								</div>
-								<h5 class="counter">367</h5>
+								<h5><span class="counter">5</span>K+</h5>
 								<p>
-									Tickets Submited
+									Maintenance Performed
 								</p>
 							</div>
 						</div>
@@ -172,44 +169,6 @@
 				</div>
 			</section>
 			<!-- End faq Area -->
-
-			<!-- Start service Area -->
-			<section class="home-client-area section-gap" id="client">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-md-12 pb-30 header-text text-center">
-							<h1 class="mb-10">Just a few of our clients</h1>
-							<p>
-								We are a leading regional provider of wireless and wireline telecommunications services. Over the past twelve years we have served multiple clients in the industry. A selection of our clients is listed below.
-							</p>
-						</div>
-					</div>
-					<div class="row justify-content-center">
-						<div class="col-lg-3 mb-80">
-							<img src="img/clients/sprint.png" alt="logo">
-						</div>
-						<div class="col-lg-3 mb-80">
-							<img src="img/clients/sba.png" alt="logo">
-						</div>
-						<div class="col-lg-3 mb-80">
-							<img src="img/clients/att.png" alt="logo">
-						</div>
-						<div class="col-lg-3 mb-80">
-							<img src="img/clients/american-tower.png" alt="logo">
-						</div>
-						<div class="col-lg-3">
-							<img src="img/clients/verizon.png" alt="logo">
-						</div>
-						<div class="col-lg-3">
-							<img src="img/clients/crown-castle.png" alt="logo">
-						</div>
-						<div class="col-lg-3">
-							<img src="img/clients/t-mobile.png" alt="logo">
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End service Area -->
 				
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
@@ -227,21 +186,6 @@
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
-							<div class="single-footer-widget">
-								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
-								<div class="" id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-										<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-			                            	<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-			                            	<div style="position: absolute; left: -5000px;">
-												<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-											</div>
-
-										<div class="info"></div>
-									</form>
-								</div>
-							</div>
 						</div>						
 						<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
 							<div class="single-footer-widget">
