--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-				  				<a href="mailto:test@communications.com">test@communications.com</a>
+				  				<a href="mailto:info@testcomm.com">info@testcomm.com</a>
 				  			</div>
 				  		</div>			  					
 		  			</div>
@@ -59,6 +59,7 @@
 				        <ul class="nav-menu">
 				          <li><a href="about.html">About</a></li>
 				          <li><a href="services.html">Services</a></li>
+							<li><a href="clients.html">Clients</a></li>
 						  <li><a href="contact.html">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
@@ -67,7 +68,7 @@
 			  </header><!-- #header -->
 
 			<!-- start banner Area -->
-			<section class="banner-area relative" id="home">	
+			<section class="banner-area banner-about relative" id="home">
 				<div class="overlay overlay-bg"></div>
 				<div class="container">				
 					<div class="row d-flex align-items-center justify-content-center">
@@ -95,67 +96,22 @@
 						</p>
 					</div>
 				</section>
-				<!-- End Sample Area -->
-			<!-- End home-about Area -->
-			  <section class="about-our-team">
-				  <div class="container">
-					  <!--<h3 class="text-heading">Text Sample</h3>-->
-					  <h1 class="mb-20">
-						  Our Team
-					  </h1>
-					  <div class="row justify-content-center align-items-center mb-80">
-						  <div class="col-lg-12 col-md-12">
-							  <div class="single-team-member">
-								  <div class="circle">
-									  <div class="inner"></div>
+			  <section>
+				  <div class="whole-wrap">
+					  <div class="container">
+						  <div class="section-top-border">
+							  <h3 class="mb-30">A Letter from the CEO</h3>
+							  <div class="row">
+								  <div class="col-md-4">
+									  <img src="img/ceo.jpg" alt="Darrin Wagner" style="margin-left: -35px"class="img-fluid">
 								  </div>
-								  <p>
-									  Darrin Wagner <br> President & CEO
-								  </p>
+								  <div class="col-md-7 mt-sm-20">
+									  <p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me. Listed in this article are the electronic banking systems that accept players from the United States that wish to play in online casinos.</p>
+								  </div>
 							  </div>
 						  </div>
-						  <div class="col-lg-3 col-md-6">
-							  <div class="single-team-member">
-								  <div class="circle">
-									  <div class="inner"></div>
-								  </div>
-								  <p>
-								  </p>Gerard 'Rod' LeBlanc <br> Contruction Superintendent
-							  </div>
-						  </div>
-						  <div class="col-lg-3 col-md-6">
-							  <div class="single-team-member">
-								  <div class="circle">
-									  <div class="inner"></div>
-								  </div>
-								  <p>
-									  Christian Legoria <br> Construction Manager
-								  </p>
-							  </div>
-						  </div>
-						  <div class="col-lg-3 col-md-6">
-							  <div class="single-team-member">
-								  <div class="circle">
-									  <div class="inner"></div>
-								  </div>
-								  <p>
-									  Mike Shamblin <br> Contruction Manager
-								  </p>
-							  </div>
-						  </div>
-						  <div class="col-lg-3 col-md-6">
-							  <div class="single-team-member">
-								  <div class="circle">
-									  <div class="inner"></div>
-								  </div>
-								  <p>
-									  Tammy Kellis <br> Finance & Accounting Manager
-								  </p>
-							  </div>
-						  </div>
-					  </div>
-				  </div>
 			  </section>
+				<!-- End Sample Area -->
 
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
@@ -172,21 +128,6 @@
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
-							<div class="single-footer-widget">
-								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
-								<div class="" id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-										<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-			                            	<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-			                            	<div style="position: absolute; left: -5000px;">
-												<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-											</div>
-
-										<div class="info"></div>
-									</form>
-								</div>
-							</div>
 						</div>						
 						<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
 							<div class="single-footer-widget">
