--- a/clients.html
+++ b/clients.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
                     <a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-                    <a href="mailto:test@communications.com">test@communications.com</a>
+                    <a href="mailto:info@testcomm.com">info@testcomm.com</a>
                 </div>
             </div>
         </div>
@@ -59,6 +59,7 @@
                 <ul class="nav-menu">
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="clients.html">Clients</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -67,63 +68,56 @@
 </header><!-- #header -->
 
 <!-- start banner Area -->
-<section class="banner-area relative" id="home">
+<section class="banner-area banner-clients relative" id="home">
     <div class="overlay overlay-bg"></div>
     <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Contractors
+                    Clients
                 </h1>
-                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contractors.html"> Contractors</a></p>
+                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="clients.html"> Clients</a></p>
             </div>
         </div>
     </div>
 </section>
 <!-- End banner Area -->
 
-<!-- Start Sample Area -->
-<section class="sample-text-area">
+<section class="home-client-area section-gap" id="client">
     <div class="container">
-        <h3 class="text-heading">Text Sample</h3>
-        <p class="sample-text">
-            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
-
-        </p>
-    </div>
-</section>
-<!-- End Sample Area -->
-
-<!-- Start List Area -->
-
-<section class="container">
-    <div class="col-md-4 mt-sm-30 mb-40">
-        <h3 class="mb-20">Our Contractors</h3>
-        <div class="">
-            <ul class="unordered-list">
-                <li>Fta Keys</li>
-                <li>For Women Only Your Computer Usage</li>
-                <li>Dealing With Technical Support 10 Useful Tips</li>
-                <li>Make Myspace Your Best Designed Space</li>
-                <li>Cleaning And Organizing Your Computer</li>
-            </ul>
+        <div class="row justify-content-center">
+            <div class="col-md-12 pb-30 header-text text-center">
+                <h1 class="mb-10">Just a few of our clients</h1>
+                <p>
+                    We are a leading regional provider of wireless and wireline telecommunications services. Over the past twelve years we have served multiple clients in the industry. A selection of our clients is listed below.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="col-md-4 mt-sm-30 mb-80">
-        <h3 class="mb-20">Our Suppliers</h3>
-        <div class="">
-            <ul class="unordered-list">
-                <li>Fta Keys</li>
-                <li>For Women Only Your Computer Usage</li>
-                <li>Dealing With Technical Support 10 Useful Tips</li>
-                <li>Make Myspace Your Best Designed Space</li>
-                <li>Cleaning And Organizing Your Computer</li>
-            </ul>
+        <div class="row justify-content-center">
+            <div class="col-lg-3 mb-80">
+                <img src="img/clients/sprint-color.png" alt="logo">
+            </div>
+            <div class="col-lg-3 mb-80">
+                <img src="img/clients/sba-color.png" alt="logo">
+            </div>
+            <div class="col-lg-3 mb-80">
+                <img src="img/clients/att-color.png" alt="logo">
+            </div>
+            <div class="col-lg-3 mb-80">
+                <img src="img/clients/american-tower-color.png" alt="logo">
+            </div>
+            <div class="col-lg-3">
+                <img src="img/clients/verizon-color.png" alt="logo">
+            </div>
+            <div class="col-lg-3">
+                <img src="img/clients/crown-castle-color.png" alt="logo">
+            </div>
+            <div class="col-lg-3">
+                <img src="img/clients/t-mobile-color.png" alt="logo">
+            </div>
         </div>
     </div>
 </section>
-
-<!-- End List Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
@@ -140,21 +134,6 @@
                 </div>
             </div>
             <div class="col-lg-5  col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>Newsletter</h6>
-                    <p>Stay update with our latest</p>
-                    <div class="" id="mc_embed_signup">
-                        <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-                            <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-                            <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-                            <div style="position: absolute; left: -5000px;">
-                                <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                            </div>
-
-                            <div class="info"></div>
-                        </form>
-                    </div>
-                </div>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-6 social-widget">
                 <div class="single-footer-widget">
