--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
                     <a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-                    <a href="mailto:test@communications.com">test@communications.com</a>
+                    <a href="mailto:info@testcomm.com">info@testcomm.com</a>
                 </div>
             </div>
         </div>
@@ -58,6 +58,7 @@
                 <ul class="nav-menu">
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="clients.html">Clients</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -165,26 +166,6 @@
                 </div>
             </div>
             <div class="col-lg-5  col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>Newsletter</h6>
-                    <p>Stay update with our latest</p>
-                    <div class="" id="mc_embed_signup">
-                        <form target="_blank" novalidate="true"
-                              action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                              method="get" class="form-inline">
-                            <input class="form-control" name="EMAIL" placeholder="Enter Email"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-                                   required="" type="email">
-                            <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
-                                                                         aria-hidden="true"></i></button>
-                            <div style="position: absolute; left: -5000px;">
-                                <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                            </div>
-
-                            <div class="info"></div>
-                        </form>
-                    </div>
-                </div>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-6 social-widget">
                 <div class="single-footer-widget">
