more content updates

--- a/services.html
+++ b/services.html
@@ -137,7 +137,7 @@
                             <div class="section-top-border">
                                 <div class="row gallery-item">
                                     <div class="col-md-6">
-                                        <a href="img/elements/rf-testing.jpeg" data-lightbox="rftesting" class="img-pop-up">
+                                        <a href="img/rf-testing.jpeg" data-lightbox="rftesting" class="img-pop-up">
                                             <div class="single-gallery-image"
                                                  style="background: url(img/rf-testing.jpeg);"></div>
                                         </a>
@@ -179,19 +179,7 @@
                             </p>
                             <div class="section-top-border animated fadeInUp">
                                 <div class="row gallery-item">
-                                    <div class="col-md-4">
-                                        <a href="img/fiber-splicing-1.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
-                                            <div class="single-gallery-image"
-                                                 style="background: url(img/fiber-splicing-1.jpeg);"></div>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="img/fiber-splicing-5.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
-                                            <div class="single-gallery-image"
-                                                 style="background: url(img/fiber-splicing-5.jpeg);"></div>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <a href="img/fiber-optic-testing.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
                                             <div class="single-gallery-image"
                                                  style="background: url(img/fiber-optic-testing.jpeg);"></div>
@@ -201,12 +189,6 @@
                                         <a href="img/fiber-optic-testing-2.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
                                             <div class="single-gallery-image"
                                                  style="background: url(img/fiber-optic-testing-2.jpeg);"></div>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <a href="img/fiber-optic-testing-3.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
-                                            <div class="single-gallery-image"
-                                                 style="background: url(img/fiber-optic-testing-3.jpeg);"></div>
                                         </a>
                                     </div>
                                     <div class="col-md-4">
@@ -222,12 +204,6 @@
                                         </a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="img/otdr-testing.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
-                                            <div class="single-gallery-image"
-                                                 style="background: url(img/otdr-testing.jpeg);"></div>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-6">
                                         <a href="img/otdr-testing-2.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
                                             <div class="single-gallery-image"
                                                  style="background: url(img/otdr-testing-2.jpeg);"></div>
@@ -330,18 +306,12 @@
                                         </a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="img/microwave-2.jpeg" data-lightbox="microwave" class="img-pop-up">
-                                            <div class="single-gallery-image"
-                                                 style="background: url(img/microwave-2.jpeg);"></div>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
                                         <a href="img/microwave-3.jpeg" data-lightbox="microwave" class="img-pop-up">
                                             <div class="single-gallery-image"
                                                  style="background: url(img/microwave-3.jpeg);"></div>
                                         </a>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
                                         <a href="img/microwave-4.jpeg" data-lightbox="microwave" class="img-pop-up">
                                             <div class="single-gallery-image"
                                                  style="background: url(img/microwave-4.jpeg);"></div>
@@ -655,9 +625,9 @@
                             <div class="section-top-border">
                                 <div class="row gallery-item">
                                     <div class="col-md-6">
-                                        <a href="img/fact.jpg" data-lightbox="warehousing" class="img-pop-up">
+                                        <a href="img/warehousing.jpeg" data-lightbox="warehousing" class="img-pop-up">
                                             <div class="single-gallery-image"
-                                                 style="background: url(img/fact.jpg);"></div>
+                                                 style="background: url(img/warehousing.jpeg);"></div>
                                         </a>
                                     </div>
                                 </div>
