uploaded training pics for safety section

--- a/services.html
+++ b/services.html
@@ -605,6 +605,26 @@
                             </ul>
                             <div class="section-top-border">
                                 <div class="row gallery-item">
+                                    <div class="row gallery-item">
+                                        <div class="col-md-4">
+                                            <a href="img/training.jpeg" data-lightbox="safety" class="img-pop-up">
+                                                <div class="single-gallery-image"
+                                                     style="background: url(img/training.jpeg);"></div>
+                                            </a>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <a href="img/training-2.jpeg" data-lightbox="safety" class="img-pop-up">
+                                                <div class="single-gallery-image"
+                                                     style="background: url(img/training-2.jpeg);"></div>
+                                            </a>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <a href="img/training-3.jpeg" data-lightbox="safety" class="img-pop-up">
+                                                <div class="single-gallery-image"
+                                                     style="background: url(img/training-3.jpeg);"></div>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
