more content modifications

--- a/clients.html
+++ b/clients.html
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                    <a href="tel:+880 012 3654 896">+880 012 3654 896</a>
+                    <a href="tel:985-863-5510">985-863-5510</a>
                     <a href="mailto:info@testcomm.com">info@testcomm.com</a>
                 </div>
             </div>
