--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                    <a href="tel:+880 012 3654 896">+880 012 3654 896</a>
+                    <a href="tel:985-863-5510">985-863-5510</a>
                     <a href="mailto:info@testcomm.com">info@testcomm.com</a>
                 </div>
             </div>
@@ -94,8 +94,8 @@
                         <span class="lnr lnr-home"></span>
                     </div>
                     <div class="contact-details">
-                        <h5>New Orleans, La</h5>
-                        <p>123 American Way</p>
+                        <h5>Pearl River, LA 70453</h5>
+                        <p>63254 Old Military Road</p>
                     </div>
                 </div>
                 <div class="single-contact-address d-flex flex-row">
@@ -103,8 +103,7 @@
                         <span class="lnr lnr-phone-handset"></span>
                     </div>
                     <div class="contact-details">
-                        <h5>00 (880) 9865 562</h5>
-                        <p>Mon to Fri 9am to 6 pm</p>
+                        <h5>Office: 985-863-5510</h5>
                     </div>
                 </div>
                 <div class="single-contact-address d-flex flex-row">
@@ -112,7 +111,7 @@
                         <span class="lnr lnr-envelope"></span>
                     </div>
                     <div class="contact-details">
-                        <h5>support@testcommunications.com</h5>
+                        <h5>infot@testcomm.com</h5>
                         <p>Send us your inquiry anytime!</p>
                     </div>
                 </div>
