--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 				  				</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
+				  				<a href="tel:985-863-5510">985-863-5510</a>
 				  				<a href="mailto:info@testcomm.com">info@testcomm.com</a>
 				  			</div>
 				  		</div>			  					
@@ -106,7 +106,35 @@
 									  <img src="img/ceo.jpg" alt="Darrin Wagner" style="margin-left: -35px"class="img-fluid">
 								  </div>
 								  <div class="col-md-7 mt-sm-20">
-									  <p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me. Listed in this article are the electronic banking systems that accept players from the United States that wish to play in online casinos.</p>
+									  <p>
+										  I would like to welcome you to the TEST Communications website. I am very pleased to write this message as the President and Chief Executive Officer of TEST Communications. I sincerely hope that after reading this, you will find a few reasons to want to know us better.
+									  </p>
+									  <p>
+										  TEST was founded in 2005 and recently celebrated its thirteenth year of continuous operations.  TEST has strived to embrace the missions of our clients and to make serving them our primary focus. Identifying their requirements and executing on our commitment to excellence in service delivery are the underpinning of the forces that propel us towards our goal of achieving customer satisfaction each and every time.
+									  </p>
+									  <p>
+										  At this time in our company’s history, and amidst the backdrop of a particularly challenging financial and business environment, we continue to push the limits of our boundaries and achieve phenomenal growth without looking back. Here at TEST Communications, our core values, drive every aspect of our operations and we firmly believe they are what set us apart from our industry peers:
+									  </p>
+									  <p>
+										  <strong class="bold-600">T</strong>eamwork: An essential part of the execution process is teaming up with our clients to ensure that their requirements are being met. We believe it’s important to foster a positive internal culture with the concept of “TEAM First” being central to our success. Our employees are the lifeblood of TEST Communications and we value every one of them for their individual contributions to our team.
+									  </p>
+									  <p>
+										  <strong class="bold-600">E</strong>xcellence: We are continuously monitoring our people and processes to assure that we provide the highest level of service and a quality experience for our all our clients. From the bid & quoting process to the final payment and everything in between, we strive to be <strong>Excellent</strong> in every aspect.
+									  </p>
+									  <p>
+										  <strong class="bold-600">S</strong>afety is # 1: We take pride in our safety processes and record. There is nothing more important to us than the safety of our employees and clients.
+									  </p>
+									  <p>
+										  <strong class="bold-600">T</strong>imely: We realize that projects are driven by deadlines. Succeeding in the timely presentation of required deliverables to our clients, facilitates client success at each step of the process. We enable our clients to serve their clients on time and on schedule.
+									  </p>
+									  <p>Looking toward the future, we will continue building upon our past success by expanding our customer portfolio, project experience and by making significant investments in our employees and strategic partners. We will target improvements in processes and methodologies while maintaining a fanatical focus on safety, training, and customer satisfaction. </p>
+									  <p>I am excited about this journey and invite you to learn more about TEST Communications by exploring our website or contacting us directly. </p>
+									  <p>
+										  Sincerely,
+										  <br><br>
+									  <p>Darrin Wagner</p>
+									  <p>President and Chief Executive Officer<p>
+									  </p>
 								  </div>
 							  </div>
 						  </div>
