removed animation from image

--- a/services.html
+++ b/services.html
@@ -177,7 +177,7 @@
                                     TEST technicians are trained to perform IL and ORL tests as required to confirm proper connectivity of fiber links from the BBU to the RRU on the tower top.
                                 </span>
                             </p>
-                            <div class="section-top-border animated fadeInUp">
+                            <div class="section-top-border">
                                 <div class="row gallery-item">
                                     <div class="col-md-6">
                                         <a href="img/fiber-optic-testing.jpeg" data-lightbox="fiberoptics" class="img-pop-up">
