added site keywords and description

--- a/404.html
+++ b/404.html
@@ -8,9 +8,9 @@
     <!-- Author Meta -->
     <meta name="author" content="codepixer">
     <!-- Meta Description -->
-    <meta name="description" content="">
+    <meta name="description" content="TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers. These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.">
     <!-- Meta Keyword -->
-    <meta name="keywords" content="">
+    <meta name="keywords" content="wireless, innovation, test, test communications, testing, ef&i, specialty, rf testing, fiber optic, engineering, furnish, installation, line, antenna, microwave, commissioning, integration, outside plant, inside plant, lighting, broadband, wifi, das, site acquisition, architecture, tower, tower modification, safety, quality, warehousing, logistics">
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
