--- a/Industry - Doc/index.html
+++ b/Industry - Doc/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>Test Communications</title>
-        <meta name="description" content="">
+        <meta name="description" content="TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers. These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.">
 		<!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
