updated footer about us section

--- a/contact.html
+++ b/contact.html
@@ -156,8 +156,7 @@
                 <div class="single-footer-widget">
                     <h6>About Us</h6>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.
+                        We are a leading regional provider of wireless and wireline telecommunications services.
                     </p>
                     <p class="footer-text">
 
