added new pages and content where needed

--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,11 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="clients.html">Clients</a></li>
+                    <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -111,7 +113,7 @@
                         <span class="lnr lnr-envelope"></span>
                     </div>
                     <div class="contact-details">
-                        <h5>infot@testcomm.com</h5>
+                        <h5>info@testcomm.com</h5>
                         <p>Send us your inquiry anytime!</p>
                     </div>
                 </div>
