--- a/about.html
+++ b/about.html
@@ -57,10 +57,12 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li><a href="about.html">About</a></li>
-				          <li><a href="services.html">Services</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="services.html">Services</a></li>
 							<li><a href="clients.html">Clients</a></li>
-						  <li><a href="contact.html">Contact</a></li>
+							<li><a href="careers.html">Careers</a></li>
+							<li><a href="contact.html">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
