--- a/careers.html
+++ b/careers.html
@@ -39,7 +39,6 @@
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </div>
@@ -53,11 +52,11 @@
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
             <div id="logo">
-                <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+                <a href="index.html"><img src="img/logo.png" alt="" title=""/></a>
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="clients.html">Clients</a></li>
@@ -70,56 +69,86 @@
 </header><!-- #header -->
 
 <!-- start banner Area -->
-<section class="banner-area banner-clients relative" id="home">
+<section class="banner-area banner-career relative" id="home">
     <div class="overlay overlay-bg"></div>
     <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Clients
+                    Careers
                 </h1>
-                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="clients.html"> Clients</a></p>
+                <p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span>
+                    <a href="careers.html"> Careers</a></p>
             </div>
         </div>
     </div>
 </section>
 <!-- End banner Area -->
 
-<section class="home-client-area section-gap" id="client">
+<!-- Start contact-page Area -->
+<section class="contact-page-area section-gap">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 pb-30 header-text text-center">
-                <h1 class="mb-10">Just a few of our clients</h1>
-                <p>
-                    We are a leading regional provider of wireless and wireline telecommunications services. Over the past twelve years we have served multiple clients in the industry. A selection of our clients is listed below.
-                </p>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/sprint-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/sba-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/att-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/american-tower-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3">
-                <img src="img/clients/verizon-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3">
-                <img src="img/clients/crown-castle-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3">
-                <img src="img/clients/t-mobile-color.png" alt="logo">
-            </div>
+        <div class="row">
+           <!-- <div class="col-lg-4 d-flex flex-column address-wrap">
+                <div class="single-contact-address d-flex flex-row">
+                    <div class="icon">
+                        <span class="lnr lnr-home"></span>
+                    </div>
+                    <div class="contact-details">
+                        <h5>Pearl River, LA 70453</h5>
+                        <p>63254 Old Military Road</p>
+                    </div>
+                </div>
+                <div class="single-contact-address d-flex flex-row">
+                    <div class="icon">
+                        <span class="lnr lnr-phone-handset"></span>
+                    </div>
+                    <div class="contact-details">
+                        <h5>Office: 985-863-5510</h5>
+                    </div>
+                </div>
+                <div class="single-contact-address d-flex flex-row">
+                    <div class="icon">
+                        <span class="lnr lnr-envelope"></span>
+                    </div>
+                    <div class="contact-details">
+                        <h5>infot@testcomm.com</h5>
+                        <p>Send us your inquiry anytime!</p>
+                    </div>
+                </div>
+            </div>-->
+           <!-- <div class="col-lg-12">
+                <form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
+                    <div class="row">
+                        <div class="col-lg-6 form-group">
+                            <input name="firstname" type="hidden">
+                            <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
+                                   onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control"
+                                   required="" type="text">
+
+                            <input name="email" placeholder="Enter email address"
+                                   pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'"
+                                   class="common-input mb-20 form-control" required="" type="email">
+
+                            <input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''"
+                                   onblur="this.placeholder = 'Enter your subject'"
+                                   class="common-input mb-20 form-control" required="" type="text">
+                            <div class="mt-20 alert-msg" style="text-align: left;"></div>
+                        </div>
+                        <div class="col-lg-6 form-group">
+                            <textarea class="common-textarea form-control" name="message" placeholder="Message"
+                                      onfocus="this.placeholder = ''" onblur="this.placeholder = 'Message'"
+                                      required=""></textarea>
+                            <button class="genric-btn primary mt-30" style="float: right;">Send Message</button>
+                        </div>
+                    </div>
+                </form>
+            </div>-->
         </div>
     </div>
 </section>
+<!-- End contact-page Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
@@ -132,6 +161,7 @@
                         We are a leading regional provider of wireless and wireline telecommunications services.
                     </p>
                     <p class="footer-text">
+
                     </p>
                 </div>
             </div>
@@ -155,9 +185,12 @@
 <!-- End footer Area -->
 
 <script defer src="js/vendor/jquery-2.2.4.min.js"></script>
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
 <script defer src="js/vendor/bootstrap.min.js"></script>
-<script type="text/javascript" defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+<script type="text/javascript"
+        defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
 <script defer src="js/easing.min.js"></script>
 <script defer src="js/hoverIntent.js"></script>
 <script defer src="js/superfish.min.js"></script>
