--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li><a href="about.html">About</a></li>
-				          <li><a href="services.html">Services</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="services.html">Services</a></li>
 							<li><a href="clients.html">Clients</a></li>
-						  <li><a href="contact.html">Contact</a></li>
+							<li><a href="careers.html">Careers</a></li>
+							<li><a href="contact.html">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -91,7 +93,7 @@
 							<div class="single-cat d-flex flex-column">
 								<h4 class="mb-20 mt-40">Testing</h4>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
+									We provide testing in multiple areas including RF and optical.
 								</p>
 							</div>															
 						</div>
@@ -99,7 +101,7 @@
 							<div class="single-cat">
 								<h4 class="mt-40 mb-20">EF&I</h4>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
+									We provide comprehensive coverage across all areas of EF&I services.
 								</p>
 							</div>															
 						</div>
@@ -107,9 +109,18 @@
 							<div class="single-cat">
 								<h4 class="mt-40 mb-20">Specialty</h4>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
+									We provide services in multiple areas including but not limited to Site Acquisition and A&E services.
 								</p>
 							</div>							
+						</div>
+					</div>
+					<div class="row align-center mt-20">
+						<div class="col-lg-12">
+							<div class="single-cat">
+								<div>
+									<a href="services.html" class="genric-btn primary services-btn">View All Services</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>	
@@ -220,6 +231,9 @@
 			<script defer src="js/waypoints.min.js"></script>
 			<script defer src="js/mail-script.js"></script>
 			<script defer src="js/main.js"></script>
+			  <script>
+
+			  </script>
 		</body>
 	</html>
 
